2007-12-04  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: New diff option --suppress-blank-empty (no longer -u default).
	* doc/diff.texi (Detailed Unified): Trailing spaces are no longer
	omitted.
	(Trailing Blanks): New section.
	(diff Options) Mention new option.
	* src/diff.h (suppress_blank_entry): New decl.
	* src/context.c (pr_unidiff_hunk): Support --suppress-blank-empty.
	* src/util.c (print_1_line): Likewise.
	* src/diff.c (longopts, main, option_help_msgid): Likewise.
	(SUPPRESS_BLANK_EMPTY_OPTION): New constant.

	* configure.ac: Invoke gl_USE_SYSTEM_EXTENSIONS after gl_EARLY,
	since gnulib now requires this order.

	* bootstrap: Import from gnulib.

2007-08-17  Paul Eggert  <eggert@cs.ucla.edu>

	Break out diffseq.h into a separate file, so that gettext can use
	this code.  Idea and code from Bruno Haible.
	* bootstrap.conf (gnulib_modules): Add diffseq.
	* src/analyze.c (xvec, yvec, fdiag, bdiag, too_expensive, SNAKE_LIMIT):
	(struct partition, diag, compareseq): Remove; now in diffseq.h.
	(ELEMENT, EQUAL, OFFSET, EXTRA_CONTEXT_FIELDS, NOTE_DELETE, NOTE_INSERT):
	(USE_HEURISTIC): New macros.
	Include "diffseq.h".
	(diff_2_files): Rewrite to use new diffseq.h interface.

	* bootstrap: Import from gnulib.

2007-08-15  Paul Eggert  <eggert@cs.ucla.edu>

	* src/diff.c (compare_files): Use last_component rather than base_name,
	adjusting to gnulib API change.  This avoids a memory leak.
	* src/sdiff.c (expand_name): Likewise.
	* src/util.c (dir_file_pathname): Likewise.

	* doc/diff.texi (Copying This Manual): Adjust to new fdl.texi layout.

2007-07-19  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/diff.texi (White Space): Note that newline always ends a line,
	so -w doesn't ignore newline-related changes.  Problem reported by
	David Kastrup.

	* COPYING: New file.
	* AUTHORS: Update from GPLv2 to GPLv3.
	* Makefile.am: Likewise.
	* NEWS: Likewise.
	* README: Likewise.
	* README-hacking: Likewise.
	* bootstrap: Likewise.
	* bootstrap.conf: Likewise.