@@ -22,7 +22,7 @@ gnulib_modules='
 	extensions fcntl fdl file-type fnmatch-gnu getopt gettext
 	gettime hard-locale inttostr inttypes mkstemp regex sh-quote
 	stat-macros stat-time strcase strftime strtoumax unistd
-	unlocked-io verify version-etc version-etc-fsf xalloc
+	unlocked-io verify version-etc version-etc-fsf wcwidth xalloc
 	xstrtoumax
 '
 
